I made the decision instead to have multiple links to different pages as I had planned to do. I would utilise sections this way the user can just scroll down to see all the information about Maui and the sun instead of having to go to different web ages. This is a lot more user-friendly. I made it so that 1 section takes up 100% of the page both height and width. I first used  100% height but realised this was not working and it was not taking up 100% height of the screen. I learned I must use 100vh to take up 100% of the viewport height. this guide really helped https://dirask.com/questions/CSS-what-is-difference-between-height-100-and-height-100vh-p2XRv1#:~:text=Here%20is%20the%20main%20difference,of%20the%20parent%27s%20element%20height. I also learnt that sometimes browsers have automatically built-in default padding and margins which can often create white gaps. To fix this I learnt I must set padding and margins to 0% to get rid of this white gap. I did this by setting html and body elements to have 0% padding and margins.

--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-body{
+.home{
     margin: 0;
     padding: 0;
     font-family: Arial, sans-serif;
@@ -112,5 +112,7 @@ width: 200px;
 }
 
 /*style for about page coming soon
+
+
 
 
